Took our SideBar and Added DeckViewer.

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -33,3 +33,9 @@ body {
     font-family: cursive;
     color: white;
 }
+
+.deck-info{
+    font-size: 30px;
+    font-family: cursive;
+    color: white;
+}
